--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  box-sizing: border-box;
+  @apply text-white;
+}
+
+.button {
+  @apply bg-purple-700 font-bold p-5 px-10 rounded-3xl m-5 justify-items-center;
+}
+
+.button:hover,
+.button:disabled {
+  @apply bg-purple-500;
 }
